<resources>
    <string name="app_name">ProjetAndroid</string>

    <string name="formulaireTxt">Remplir le formulaire manuellement</string>
    <string name="QrCode">QrCode</string>

    <string name="txtSave">Créer</string>
    <string name="txtPrenom">Prénom</string>
    <string name="txtNom">Nom</string>
    <string name="txtEmail">Email</string>
    <string name="txtAdress">Adresse</string>
    <string name="txtCodePostal">CodePostal</string>
    <string name="txtVille">Ville</string>
    <string name="txtCarteFidelite">Carte de fidélité</string>

    <string name="txtCreate">Création de compte</string>
    <string name="txtCompte">Compte</string>
    <string name="textSave">J\'enregistre les modifications</string>

    <string name="txtTitle">Header</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txtMovies">Films</string>
    <string name="txtShop">Panier</string>
    <string name="txtCard">Carte</string>
    <string name="txtMap">Salles</string>

    <string name="addShop">Ajouter au panier</string>
    <string name="presentInShop">Film déjà dans votre panier</string>
    <string name="addInShop">film ajouté au panier</string>
    <string name="shopVide">Votre panier est vide</string>

    <string name="description">Description : </string>
    <string name="parking">Parking info : </string>
    <string name="transport">Transport : </string>

    <string name="movieName">nom du film : </string>


</resources>