<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextNom"
        style="@style/EditText"
        android:hint="@string/txtNom"/>
    <EditText
        android:id="@+id/editTextPrenom"
        style="@style/EditText"
        android:hint="@string/txtPrenom"/>
    <EditText
        style="@style/EditText"
        android:id="@+id/editTextEmail"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"/>
    <EditText
        style="@style/EditText"
        android:id="@+id/editTextAdress"
        android:hint="@string/txtAdress"/>
    <EditText
        style="@style/EditText"
        android:id="@+id/editTextCodePostal"
        android:hint="@string/txtCodePostal"/>
    <EditText
        style="@style/EditText"
        android:id="@+id/editTextVille"
        android:hint="@string/txtVille"/>
    <EditText
        style="@style/EditText"
        android:id="@+id/editTextCarteFidelite"
        android:hint="@string/txtCarteFidelite"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/txtSave" />
</LinearLayout>